# icevision

./: .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .setup.cfg  404.html  CHANGELOG.md  CHANGING-THE-COLORS.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  FAQ.md  HOW-TO.md  INSTALL.md  MANIFEST.in  MODEL_FASTER_RCNN.md  Makefile  README.md  README.rst  README_MKDOCS.md  _pyproject.toml  contributing.rst  cpu.Dockerfile  environment-windows.yml  environment.yml  faqs.rst  gpu.Dockerfile  icevision_install.sh  index.html  install_colab.sh  install_icevision_inference.sh  logs.json  pyproject.toml  pytest.ini  raccoon.ipynb  requirements-docs.txt  requirements-extra.txt  (+10 more)
.github/: pull.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documenetation_request_fix.md  example-request.md  (+2 more)
0.11.0/: 404.html  CNAME  index.html  sitemap.xml
0.12.0/: 404.html  index.html  sitemap.xml
0.5.2/: 404.html  index.html  sitemap.xml
0.7.0/: 404.html  index.html  sitemap.xml
0.8.0/: 404.html  index.html  sitemap.xml
0.8.1/: 404.html  index.html  sitemap.xml
IceApp_coco/: index.html
IceApp_masks/: index.html
IceApp_pets/: index.html
about/: index.html
albumentations/: index.html
albumentations_tfms/: index.html
backbones_effecientdet/: index.html
backbones_faster_mask_rcnn/: index.html
changing_the_colors/: index.html
coco_keypoints/: index.html
code_of_conduct/: index.html
contributing/: index.html
custom_parser/: index.html
data_splits/: index.html
dataset/: index.html
dataset_voc_nb/: index.html
deployment/: index.html
dev/: 404.html  index.html  sitemap.xml
docker/: Dockerfile  README.md  devcontainer.json  docker-compose.gpu.yaml  docker-compose.yaml
docs/: ABOUT.md  DEPLOYMENT.md  DOCKER.md  HOW-TO.md  INSTALL.md  README.md  Untitled.html  Untitled1.html  _config.yml  autogen.py  core.html  data.annotations.html  data.load.html  data_refactor.html  index.html  layers.html  learner.html  lightning_core.html  manifest.webmanifest  metrics.core.html  mkdocs.yml  models.html  requirements.txt  sidebar.json  transforms.html  transition.md  tutobooks.py
efficientdet/: index.html
efficientdet_fastai/: index.html
efficientdet_lightning/: index.html
efficientdet_pets/: index.html
examples/: backbones_faster_rcnn.md  backbones_faster_rcnn.py  birds.py  coco_json-Copy1.ipynb  coco_json.ipynb  dataset_voc_exp.md  dataset_voc_exp.py  detr_wheat.py  effecientdet_pets_exp.py  efficient_det_pets.py  efficient_det_pets2.py  efficientdet_pets_exp.md  efficientdet_pets_exp.py  fasterrcnn_pets.py  getting_started_exp.md  how_train_dataset_exp.md  how_train_dataset_exp.py  imaterialist-Copy1.ipynb  imaterialist.ipynb  inference.md  inference.py  inference_exp.md  maskrcnn_fastai.py  maskrcnn_lightning.py  mmdetection_quickstart.py  nbtest.ipynb  pennfudan.md  pennfundan.md  pennfundan.py  person-Copy1.ipynb  person-Copy2.ipynb  person-Copy3.ipynb  person.ipynb  person.py  quickstart_exp.md  training.md  training.py  training_using_fastai.py  wheat.ipynb  wheat.py  (+1 more)
faster_rcnn/: index.html
faster_rcnn_fastai/: index.html
faster_rcnn_lightning/: index.html
getting_started/: index.html
getting_started_efficientdet/: index.html
getting_started_mmdetection/: index.html
how-to/: index.html
icevision/: __init__.py  all.py  imports.py  soft_dependencies.py
inference/: index.html
install/: index.html
mantisshrimp/: __init__.py  _nbdev.py  all.py  core.py  imports.py  layers.py  learner.py  lightning_core.py  models.py  soft_dependencies.py  transforms.py
mask_rcnn/: index.html
mask_rcnn_fastai/: index.html
mask_rcnn_lightning/: index.html
mask_rcnn_pennfudan/: index.html
mmdetection_bbox/: index.html
mmdetection_mask/: index.html
model_comparison/: index.html
model_efficientdet/: index.html
model_faster_rcnn/: index.html
nbs/: 00_core.ipynb  00a_core.ipynb  00b_lightning_core.ipynb  01_layers.ipynb  02_data.core.ipynb  04_data.annotations.ipynb  06_data.load.ipynb  06_transforms.ipynb  07_data.load.ipynb  07_transforms.ipynb  08_models.ipynb  09_learner.ipynb  11_evaluation.coco.ipynb  11_metrics.core.ipynb  Untitled.ipynb  Untitled1.ipynb  data_refactor.ipynb  index.ipynb
negative_samples/: index.html
notebooks/: Advanced_guide.ipynb  OCHuman_Keypoint_Detection.ipynb  SAHI_inference.ipynb  advanced_guide.ipynb  camvid_low.ipynb  coco_keypoints.ipynb  custom_parser.ipynb  dataset_voc_nb.ipynb  efficientdet_pets.ipynb  getting_started.ipynb  getting_started_MMDetection.ipynb  getting_started_keypoint_detection.ipynb  getting_started_mmdetection.ipynb  getting_started_object_detection.ipynb  getting_started_semantic_segmentation.ipynb  getting_started_semantic_segmentation_mmseg.ipynb  icevision_install.sh  inference.ipynb  mask_rcnn_pennfudan.ipynb  mask_rcnn_pennfundan.ipynb  mmdetection_bbox.ipynb  mmdetection_mask.ipynb  multitask.ipynb  ochuman_keypoint_detection.ipynb  plot_top_losses.ipynb  progressive_resizing.ipynb  quickstart.ipynb  quickstart_ResNeSt.ipynb  quickstart_RestNeSt.ipynb  retinanet.ipynb  test.py  testmmseg.py  timm_mmdet_integration.ipynb  training_efficientdet.ipynb  use_fiftyone_with_icevision.ipynb  using_fiftyone_in_icevision.ipynb  using_swin_transformer_as_backbone.ipynb.ipynb  voc_predefined_splits.ipynb  wandb_efficientdet.ipynb  wandb_masks.ipynb
ochuman_keypoint_detection/: index.html
parser/: index.html
plot_top_losses/: index.html
quickstart_ResNeSt/: index.html
quickstart_RestNeSt/: index.html
quickstart_object_detection/: index.html
readme_mkdocs/: index.html
retinanet/: index.html
samples/: keypoints_annotations.json
search/: search_index.json
tests/: conftest.py  pytest.ini
training_efficientdet/: index.html
tutorials/: custom_parsers.ipynb  detr_showcase.ipynb  fasterrcnn_voc.ipynb  hub_detr_finetune_pennfundan.ipynb  hub_detr_finetune_wheat.ipynb  mantisshrimp-fasterrcnn.ipynb  parser.ipynb  wheat.ipynb
voc_predefined_splits/: index.html
wandb_efficientdet/: index.html
wandb_masks/: index.html
(+1477 files in other folders)
