[tool.poetry]
name = "icevision"
version = "0.1.6"
description = "Agnostic Computer Vision Framework"
authors = ["Lucas Goulart Vazquez <lgvaz@airctic.com>", "Farid Hassainia <farid@airctic.com>"]
license = "Apache-2.0"
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.6.1"
tqdm = "^4.49.0"
opencv-python = "^4.4.0"
albumentations = "^0.4.6"
matplotlib = "^3.3.2"
pycocotools = "^2.0.2"
torch = "~1.6.0"
torchvision = "~0.7.0"
fastcore = "^1.0.14"
requests = "^2.24.0"

# Optional dependencies
fastai = { version = ">= 2.0.13", optional = true }
ipykernel = { version = "^5.3.4", optional = true}

pytorch-lightning = { version = "^0.9", optional = true }

effdet = { version = "^0.1.6", optional=true }
omegaconf = { version = "^2.0.0", optional=true}
dataclasses = { version = "0.6", optional=true}

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
black = "^20.8b1"
# Docs dependencies
keras-autodoc = "0.6.0"
mkdocs = "^1.1.2"
mkdocs-material = "^5.5.12"
jupyter = "^1.0.0"
pymdown-extensions = "^8.0"
Sphinx = "<3.1.0"

[tool.poetry.extras]
all = ["fastai", "pytorch-lightning", "ipykernel", "effdet", "omegaconf", "dataclasses"]
training = ["fastai", "pytorch-lightning", "ipykernel", "effdet", "omegaconf", "dataclasses"]
fastai = ["fastai", "ipykernel"]
lightning = ["pytorch-lightning"]
inference = ["effdet", "omegaconf", "dataclasses"]
models = ["effdet", "omegaconf", "dataclasses"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
