[tool.poetry]
name = "icevision"
version = "0.11.0"
description = "Agnostic Computer Vision Framework"
authors = ["Lucas Goulart Vazquez <lgvaz42@gmail.com>, Farid Hassainia <ai.fast.track.garid@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
pillow = ">8.0.0,<9"
torch = ">=1.9.0,<1.11"
torchvision = ">=0.10.0,<0.12"
fastcore = ">=1.3.0,<1.4"
tqdm = ">=4.49.0,<5"
opencv-python = ">=4.1.1,<5"
albumentations = ">=1.0.3,<1.1"
matplotlib = ">=3.2.2,<4"
pycocotools = ">=2.0.2,<3"
requests = ">=2.23.0,<3"
loguru = ">=0.5.3"
importlib-metadata = ">=1"
fastai = "~2.5.2"
ipykernel = ">=4.10.1,<6"
pytorch-lightning = "~1.4.5"
effdet = "~0.2.1"
omegaconf = "~2"
dataclasses = "0.6"
wandb = "^0.12.9"
sahi = ">0.8.19,<1"
resnest = ">=0.0.6b20201125,<0.0.7"
yolov5-icevision = "~6"

[tool.poetry.dev-dependencies]
black = "==20.8b1"
pytest = ">=6,<7"
keras-autodoc = "==0.6.0"
mkdocs = ">=1.1.2,<2"
mike = ">=1.0"
jupyter = ">=1.0.0,<2"
pymdown-extensions = ">=8.0,<9"
Sphinx = ">=3.1.0,<4"
pytest-cov = ">=2.10.1,<3"
flake8 = ">=3.8.3,<4"
pre-commit = ">=2.8.2,<3"
pytest-mock = ">=3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
