[project]
name = "icevision"
dynamic = ["version"]
description = "Agnostic Computer Vision Framework"
keywords = ["object detection", "machine learning"]
license = {file = "LICENSE"}
authors = [
    {name="Lucas Goulart Vazquez", email="lgvaz42@gmail.com"},
    {name="Farid Hassainia", email="ai.fast.track.farid@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch==1.13.1",
    "torchvision==0.14.1",
    "notebook<7",
    "loguru>=0.7.2",
    "albumentations>=1.0.3,<1.1",
]


[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[tool.hatch.version]
path = "icevision/_version.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
