# reference: https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = icevision
version = 0.2.2post2
author = Lucas Goulart Vazquez, Farid Hassainia
author_email = lgvaz42@gmail.com, farid@airctic.com
description = Agnostic Computer Vision Framework
long_description = file: README.md
long_description_content_type = text/markdown
keywords = object detection, machine learning
license = Apache-2.0
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Image Recognition

[options]
python_requires = >=3.6.1,<4
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    torch >=1.7.0,<1.8
    torchvision >=0.8.0,<0.9
    fastcore >=1.3.0,<1.4
    tqdm >=4.49.0,<5
    opencv-python >=4.1.1,<5
    albumentations >=0.4.6,<0.6
    matplotlib >=3.2.2,<4
    pycocotools >=2.0.2<3
    requests >=2.24.0<3
    loguru >=0.5.3
    imagesize >= 1.2.0

[options.extras_require]
all =
    fastai >=2.1,<2.2
    ipykernel >=4.10.1,<6
    pytorch-lightning >=1.0,<1.1
    effdet >=0.1.6,<0.2
    omegaconf >=2,<3
    dataclasses ==0.6
    wandb >=0.10.7
inference =
    effdet >=0.1.6,<0.2
    omegaconf >=2,<3
    dataclasses ==0.6
dev =
  black >=20.8b1,<21
  pytest >=6,<7
  keras-autodoc ==0.6.0
  mkdocs >=1.1.2,<2
  mkdocs-material >=5.5.12,<6
  jupyter >=1.0.0,<2
  pymdown-extensions >=8.0,<9
  Sphinx >=3.1.0,<4
  pytest-cov >=2.10.1,<3
  flake8 >=3.8.3,<4
  
