# reference: https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = icevision
version = 0.8.1
author = Lucas Goulart Vazquez, Farid Hassainia
author_email = lgvaz42@gmail.com, farid@airctic.com
description = Agnostic Computer Vision Framework
long_description = file: README.md
long_description_content_type = text/markdown
keywords = object detection, machine learning
license = Apache-2.0
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Image Recognition

[options]
python_requires = >=3.6,<4
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    torch >=1.7.0,<1.9
    torchvision >=0.8.0,<0.10
    fastcore >=1.3.0,<1.4
    tqdm >=4.49.0,<5
    opencv-python >=4.1.1,<5
    albumentations >=0.4.6,<0.6
    matplotlib >=3.2.2,<4
    pycocotools>=2.0.2<3
    requests >=2.23.0<3
    loguru >=0.5.3
    pillow > 8.0.0
    importlib-metadata>=1;python_version<"3.8"

[options.extras_require]
all =
    fastai >=2.1,<2.4
    ipykernel >=4.10.1,<6
    pytorch-lightning >=1.2.10
    effdet >=0.2.1,<0.3
    omegaconf >=2,<3
    dataclasses ==0.6
    wandb >=0.10.7
    resnest >=0.0.6b20201125,<0.0.7
    timm
inference =
    effdet >=0.2.1,<0.3
    omegaconf >=2,<3
    dataclasses ==0.6
    resnest >=0.0.6b20201125,<0.0.7
dev =
  black >=20.8b1,<21
  pytest >=6,<7
  keras-autodoc ==0.6.0
  mkdocs >=1.1.2,<2
  mkdocs-material >=7.0.6,<8
  mike >=0.5.5,<1
  jupyter >=1.0.0,<2
  pymdown-extensions >=8.0,<9
  Sphinx >=3.1.0,<4
  pytest-cov >=2.10.1,<3
  flake8 >=3.8.3,<4
  pre-commit >=2.8.2,<3

[flake8]
# from ci-all-testing.yaml
select = E9,F63,F7,F82
