# reference: https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = icevision
version = 0.12.0
author = Lucas Goulart Vazquez, Farid Hassainia
author_email = lgvaz42@gmail.com, ai.fast.track.farid@gmail.com
description = Agnostic Computer Vision Framework
long_description = file: README.md
long_description_content_type = text/markdown
keywords = object detection, machine learning
license = Apache-2.0
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
#   Programming Language :: Python :: 3.6 ## numpy >= 1.20.0 dropped support for python 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Image Recognition

[options]
python_requires = >=3.7,<4
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pillow >8.0.0,<9
    torch >=1.9.0,<1.11
    torchvision >=0.10.0,<0.12
    fastcore >=1.3.0,<1.4
    tqdm >=4.49.0,<5
    opencv-python >=4.1.1,<5
    albumentations >=1.0.3,<1.1
    resnest >=0.0.6b20201125,<0.0.7
    effdet >=0.2.1,<0.3
    sahi >=0.11.1,<0.12.0
    yolov5-icevision >=6.0.0
    importlib-metadata >=1;python_version<"3.8"
    ipykernel >=4.10.1,<6
    dataclasses ==0.6
    loguru >=0.5.3
    rasterio>=1.3a1, <2


[options.extras_require]
inference =
    icevision

all =
    fastai >=2.5.2,<2.6
    pytorch-lightning >=1.5.0
    wandb >=0.10.7

dev =
    icevision[all]
    keras-autodoc ==0.6.0
    black ==20.8b1
    pytest >=6,<7
    mkdocs >=1.1.2,<2
    mkdocs-material >=7.3.1,<8
    mike >=1.0
    jupyter >=1.0.0,<2
    Sphinx >=3.1.0,<4
    pytest-cov >=2.10.1,<3
    flake8 >=3.8.3,<4
    pre-commit >=2.8.2,<3
    pytest-mock >=3.6.1


[flake8]
# from ci-all-testing.yaml
select = E9,F63,F7,F82
